--- a/packages/generator-phaser-plus-template-default/templates/project/package.json
+++ b/packages/generator-phaser-plus-template-default/templates/project/package.json
@@ -11,25 +11,26 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "browser-sync": "^2.24.7",
-    "copy-webpack-plugin": "^4.5.2",
-    "del": "^3.0.0",
-    "eslint": "^5.5.0",
-    "eslint-loader": "^2.1.0",
-    "fancy-log": "^1.3.2",
-    "gulp": "^4.0.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
+    "copy-webpack-plugin": "^5.0.4",
+    "del": "^5.0.0",
+    "eslint": "^6.1.0",
+    "eslint-loader": "^2.2.1",
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "plugin-error": "^1.0.1",
-    "read-pkg-up": "^4.0.0",
-    "webpack": "^4.17.2",
-    "webpack-dev-middleware": "^3.2.0"
+    "read-pkg-up": "^6.0.0",
+    "webpack": "^4.39.1",
+    "webpack-dev-middleware": "^3.7.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "phaser": "^3.12.0"
+    "core-js": "^3.1.4",
+    "phaser": "^3.18.1",
+    "regenerator-runtime": "^0.13.3"
   },
   "private": true
 }
